--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,20 +3,19 @@ name: Node CI
 on: [push]
 
 jobs:
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
 
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
           npm install
           npm run build
-
+      - uses: actions/upload-artifact@main
+        with:
+          name: webpack artifacts
+          path: public/
   test:
 
     runs-on: ubuntu-latest
