--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -3,3 +3,11 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
+    name: Label when approved
+    steps:
+        - name: Label when approved
+          uses: pullreminders/label-when-approved-action@master
+          env:
+            APPROVALS: "1"
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            ADD_LABEL: "approved"
